--- a/linux-git/PKGBUILD
+++ b/linux-git/PKGBUILD
@@ -12,7 +12,7 @@ license=('GPL2')
 makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils'
              'bc' 'git' 'linux-firmware' 'mkinitcpio')
 options=('!strip')
-source=('git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git'
+source=('git://github.com/Phant0mas/linux.git'
         # the main kernel config files
         'config' 'config.x86_64'
         # standard config files for mkinitcpio ramdisk
@@ -58,13 +58,13 @@ prepare() {
 
   # load configuration
   # Configure the kernel. Replace the line below with one of your choice.
-  #make menuconfig # CLI menu for configuration
-  make nconfig # new CLI menu for configuration
+  make menuconfig # CLI menu for configuration
+  #make nconfig # new CLI menu for configuration
   #make xconfig # X-based configuration
   #make oldconfig # using old config from previous kernel version
   # ... or manually edit .config
 
-  make localmodconfig
+  #make localmodconfig
 
   # rewrite configuration
   yes "" | make config >/dev/null
